# ASL_Data_Evaluation

./: CMakeLists.txt  Readme.md  benchmark.cpp  exact.cpp  flops.cpp  improved_mc.cpp  lsh.cpp  measure.cpp
data/: x_test.csv  x_train.csv
include/: argparse.hpp  benchmark.h  exact.h  flops.h  improved_mc.h  lazycsv.hpp  matrix.h
python/: exact_sp.py
scripts/: measure.sh  plot.py
tests/: acutest.h  test_exact.cpp  test_improved_mc.cpp
tests/set_00/test_set_0/: x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/set_00/test_set_1/: info.txt  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/set_00/test_set_10/: info.txt  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/set_00/test_set_11/: info.txt  knn_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_0/: knn_gt.csv  sp_gt.csv
tests/test_set_1/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv
tests/test_set_10/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_11/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_12/: info.txt  x_test.csv  y_test.csv  y_train.csv
tests/test_set_13/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_14/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_15/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_16/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_17/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_18/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_19/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_2/: info.txt  my_sp_gt.csv  sp_gt.csv  x_test.csv  y_test.csv  y_train.csv
tests/test_set_20/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_21/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_22/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_3/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_4/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_5/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_6/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_7/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_8/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_set_9/: info.txt  knn_gt.csv  sp_gt.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
(+448 files in other folders)
